# OSGQuick

./: .gitignore  CMakeLists.txt  InputLib.cpp  OSGItem.cpp  OSGItem.h  OSGRender.cpp  OSGRender.h  OSGView.cpp  OSGView.h  README.md  RenderView.cpp  RenderView.h  main.cpp  main.qml  qml.qrc
plugin/: CMakeLists.txt  osgitem.cpp  osgitem.hpp  osgmodelloader.cpp  osgmodelloader.hpp  plugin.cpp
